--- a/templates/index.jinja2
+++ b/templates/index.jinja2
@@ -3,19 +3,37 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>Index page</title>
 </head>
 <body>
-  {% if username %}
-    <p>Hello {{username}}</p>
-  {% else %}
-    <p>Hello Anonymus</p>
-  {% endif %}
-  <form action="/" method="post">
-    <label for="username">Would you like to enter your real name?</label><br>
-    <input type="text" id="username" name="username" required><br>
-    <input type="submit" value="Submit">
-  </form>
+  <div class="container-md">
+    <div class="row justify-content-md-center">
+      <div class="col-6">
+        <div>
+          <br>
+          {% if username %}
+            Hello {{username}}!
+          {% else %}
+            Hello Anonymus!
+          {% endif %}
+          <br>
+          <br>
+        </div>
+        <div>
+          <form action="/" method="post">
+            <div class="mb-3">
+              <label for="username" class="form-label">Would you like to enter some another name?</label>
+              <input type="text" class="form-control" id="username" name="username" required>
+              <div id="username" class="form-text">You may type here whatever you want</div>
+            </div>
+            <input type="submit" class="btn btn-primary" value="Submit">
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
